@@ -113,12 +113,7 @@ ShowFoto::ShowFoto(const QList<QUrl>& urlList)
 
     // -- Load current items ---------------------------
 
-    slotDroppedUrls(urlList);
-
-    if (!d->infoList.isEmpty())
-    {
-        slotOpenUrl(d->thumbBar->currentInfo());
-    }
+    slotDroppedUrls(urlList, false);
 }
 
 ShowFoto::~ShowFoto()
@@ -182,7 +177,8 @@ void ShowFoto::show()
                                "select \"No\". In this case, \"Color Management\" feature "
                                "will be disabled until you solve this issue</p>");
 
-        if (QMessageBox::warning(this, qApp->applicationName(), message, QMessageBox::Yes | QMessageBox::No) == QMessageBox::Yes)
+        if (QMessageBox::warning(this, qApp->applicationName(), message,
+                                 QMessageBox::Yes | QMessageBox::No) == QMessageBox::Yes)
         {
             if (!setup(true))
             {
@@ -212,46 +208,225 @@ void ShowFoto::slotOpenFile()
     }
 
     QList<QUrl> urls = Digikam::ImageDialog::getImageURLs(this, d->lastOpenedDirectory);
-    openUrls(urls);
+
+    if (urls.count() > 1)
+    {
+        d->infoList.clear();
+        d->model->clearShowfotoItemInfos();
+
+        openUrls(urls);
+        emit signalInfoList(d->infoList);
+
+        slotOpenUrl(d->thumbBar->currentInfo());
+        toggleNavigation(1);
+    }
+    else if (urls.count() == 1)
+    {
+        d->infoList.clear();
+        d->model->clearShowfotoItemInfos();
+
+        openFolder(urls.first().adjusted(QUrl::RemoveFilename));
+        emit signalInfoList(d->infoList);
+
+        slotOpenUrl(d->thumbBar->findItemByUrl(urls.first()));
+        d->thumbBar->setCurrentUrl(urls.first());
+    }
+}
+
+void ShowFoto::slotOpenFolder()
+{
+    if (!d->thumbBar->currentInfo().isNull() && !promptUserSave(d->thumbBar->currentUrl()))
+    {
+        return;
+    }
+
+    QUrl url = DFileDialog::getExistingDirectoryUrl(this, i18n("Open Images From Folder"),
+                                                    d->lastOpenedDirectory);
+    if (!url.isEmpty())
+    {
+        d->infoList.clear();
+        d->model->clearShowfotoItemInfos();
+
+        openFolder(url);
+        emit signalInfoList(d->infoList);
+
+        slotOpenUrl(d->thumbBar->currentInfo());
+        toggleNavigation(1);
+    }
 }
 
 void ShowFoto::openUrls(const QList<QUrl> &urls)
 {
-    if (!urls.isEmpty())
+    if (urls.isEmpty())
     {
-        ShowfotoItemInfoList infos;
-        ShowfotoItemInfo iteminfo;
-        DMetadata meta;
+        return;
+    }
 
-        for (QList<QUrl>::const_iterator it = urls.constBegin(); it != urls.constEnd(); ++it)
-        {
-            QFileInfo fi((*it).toLocalFile());
-            iteminfo.name      = fi.fileName();
-            iteminfo.mime      = fi.suffix();
-            iteminfo.size      = fi.size();
-            iteminfo.url       = QUrl::fromLocalFile(fi.filePath());
-            iteminfo.folder    = fi.path();
-            iteminfo.dtime     = fi.created();
-            meta.load(fi.filePath());
-            iteminfo.ctime     = meta.getImageDateTime();
-            iteminfo.width     = meta.getImageDimensions().width();
-            iteminfo.height    = meta.getImageDimensions().height();
-            iteminfo.photoInfo = meta.getPhotographInformation();
+    ShowfotoItemInfoList infos;
+    ShowfotoItemInfo iteminfo;
+    DMetadata meta;
+
+    for (QList<QUrl>::const_iterator it = urls.constBegin() ; it != urls.constEnd() ; ++it)
+    {
+        QFileInfo fi((*it).toLocalFile());
+        iteminfo.name      = fi.fileName();
+        iteminfo.mime      = fi.suffix();
+        iteminfo.size      = fi.size();
+        iteminfo.url       = QUrl::fromLocalFile(fi.filePath());
+        iteminfo.folder    = fi.path();
+        iteminfo.dtime     = fi.created();
+        meta.load(fi.filePath());
+        iteminfo.ctime     = meta.getImageDateTime();
+        iteminfo.width     = meta.getImageDimensions().width();
+        iteminfo.height    = meta.getImageDimensions().height();
+        iteminfo.photoInfo = meta.getPhotographInformation();
+
+        if (!d->infoList.contains(iteminfo))
             infos.append(iteminfo);
+    }
+
+    d->infoList << infos;
+}
+
+void ShowFoto::openFolder(const QUrl& url)
+{
+    if (!url.isValid() || !url.isLocalFile())
+    {
+        return;
+    }
+
+    d->lastOpenedDirectory = url;
+
+    // Parse image IO mime types registration to get files filter pattern.
+
+    QString filter;
+    QStringList mimeTypes = supportedImageMimeTypes(QIODevice::ReadOnly, filter);
+
+    QString patterns = filter.toLower();
+    patterns.append (QLatin1Char(' '));
+    patterns.append (filter.toUpper());
+
+    qCDebug(DIGIKAM_SHOWFOTO_LOG) << "patterns=" << patterns;
+
+    // Get all image files from directory.
+
+    QDir dir(url.toLocalFile(), patterns);
+    dir.setFilter(QDir::Files);
+
+    if (!dir.exists())
+    {
+        return;
+    }
+
+    QFileInfoList fileinfolist = dir.entryInfoList();
+
+    if (fileinfolist.isEmpty())
+    {
+        //emit signalSorry();
+        return;
+    }
+
+    QFileInfoList::const_iterator fi;
+    ShowfotoItemInfoList infos;
+    ShowfotoItemInfo iteminfo;
+    DMetadata meta;
+
+    // And open all items in image editor.
+
+    for (fi = fileinfolist.constBegin() ; fi != fileinfolist.constEnd() ; ++fi)
+    {
+        iteminfo.name      = (*fi).fileName();
+        iteminfo.mime      = (*fi).suffix();
+        iteminfo.size      = (*fi).size();
+        iteminfo.folder    = (*fi).path();
+        iteminfo.url       = QUrl::fromLocalFile((*fi).filePath());
+        iteminfo.dtime     = (*fi).created();
+        meta.load((*fi).filePath());
+        iteminfo.ctime     = meta.getImageDateTime();
+        iteminfo.width     = meta.getImageDimensions().width();
+        iteminfo.height    = meta.getImageDimensions().height();
+        iteminfo.photoInfo = meta.getPhotographInformation();
+
+        if (!d->infoList.contains(iteminfo))
+            infos.append(iteminfo);
+    }
+
+    d->infoList << infos;
+}
+
+void ShowFoto::slotDroppedUrls(const QList<QUrl>& droppedUrls, bool dropped)
+{
+    if (droppedUrls.isEmpty())
+    {
+        return;
+    }
+
+    QList<QUrl> validUrls;
+
+    foreach (const QUrl& url, droppedUrls)
+    {
+        if (url.isValid())
+        {
+            validUrls << url;
+        }
+    }
+
+    QList<QUrl> imagesUrls;
+    QList<QUrl> foldersUrls;
+
+    foreach (const QUrl& url, validUrls)
+    {
+        if (QMimeDatabase().mimeTypeForUrl(url).name().startsWith(QLatin1String("image"),
+                                                                  Qt::CaseInsensitive))
+        {
+            imagesUrls << url;
         }
 
-        if (d->droppedUrls)
+        if (QMimeDatabase().mimeTypeForUrl(url).name() == QLatin1String("inode/directory"))
         {
-            //replace the equal sign with "<<" to keep the previous pics in the list
-            d->infoList << infos;
+            foldersUrls << url;
         }
-        else
+    }
+
+    if (!imagesUrls.isEmpty())
+    {
+        openUrls(imagesUrls);
+    }
+
+    if (!foldersUrls.isEmpty())
+    {
+        foreach (const QUrl& fUrl, foldersUrls)
         {
-            d->infoList = infos;
-            d->model->clearShowfotoItemInfos();
-            emit signalInfoList(d->infoList);
-            slotOpenUrl(d->thumbBar->currentInfo());
+            openFolder(fUrl);
         }
+    }
+
+    d->model->clearShowfotoItemInfos();
+    emit signalInfoList(d->infoList);
+
+    if (!d->infoList.isEmpty())
+    {
+        if (foldersUrls.isEmpty() && imagesUrls.count() == 1)
+        {
+            if (!dropped)
+            {
+                openFolder(imagesUrls.first().adjusted(QUrl::RemoveFilename));
+                d->model->clearShowfotoItemInfos();
+                emit signalInfoList(d->infoList);
+
+                slotOpenUrl(d->thumbBar->findItemByUrl(imagesUrls.first()));
+                d->thumbBar->setCurrentUrl(imagesUrls.first());
+                return;
+            }
+        }
+
+        slotOpenUrl(d->thumbBar->currentInfo());
+    }
+    else
+    {
+        QMessageBox::information(this, qApp->applicationName(),
+                                 i18n("There is no dropped item to process."));
+        qWarning(DIGIKAM_SHOWFOTO_LOG) << "infolist is empty..";
     }
 }
 
@@ -337,7 +512,7 @@ void ShowFoto::slotUpdateItemInfo()
     {
         index = 1;
 
-        for (int i = 0; i < d->itemsNb; i++)
+        for (int i = 0 ; i < d->itemsNb ; ++i)
         {
             QUrl url = d->thumbBar->showfotoItemInfos().at(i).url;
 
@@ -353,7 +528,8 @@ void ShowFoto::slotUpdateItemInfo()
                      "%1 (%2 of %3)", d->thumbBar->currentInfo().name,
                      index, d->itemsNb);
 
-        setCaption(QDir::toNativeSeparators(d->thumbBar->currentUrl().adjusted(QUrl::RemoveFilename).toLocalFile()));
+        setCaption(QDir::toNativeSeparators(d->thumbBar->currentUrl()
+                                            .adjusted(QUrl::RemoveFilename).toLocalFile()));
     }
     else
     {
@@ -363,41 +539,6 @@ void ShowFoto::slotUpdateItemInfo()
 
     m_nameLabel->setText(text);
     toggleNavigation(index);
-}
-
-void ShowFoto::slotOpenFolder(const QUrl& url)
-{
-    if (!d->thumbBar->currentInfo().isNull() && !promptUserSave(d->thumbBar->currentUrl()))
-    {
-        return;
-    }
-
-    m_canvas->load(QString(), m_IOFileSettings);
-    d->thumbBar->showfotoItemInfos().clear();
-    emit signalNoCurrentItem();
-
-    openFolder(url);
-    toggleNavigation(1);
-}
-
-void ShowFoto::slotOpenFilesInFolder()
-{
-    if (!d->thumbBar->currentInfo().isNull() && !promptUserSave(d->thumbBar->currentUrl()))
-    {
-        return;
-    }
-
-    QUrl url = DFileDialog::getExistingDirectoryUrl(this, i18n("Open Images From Folder"),
-                                                    d->lastOpenedDirectory);
-    if (!url.isEmpty())
-    {
-        m_canvas->load(QString(), m_IOFileSettings);
-        d->thumbBar->showfotoItemInfos().clear();
-        emit signalNoCurrentItem();
-
-        openFolder(url);
-        toggleNavigation(1);
-    }
 }
 
 void ShowFoto::slotFirst()
@@ -500,7 +641,8 @@ void ShowFoto::moveFile()
      *                            finishSaving(true)  save...IsComplete()
      */
 
-    qCDebug(DIGIKAM_SHOWFOTO_LOG) << m_savingContext.destinationURL << m_savingContext.destinationURL.isLocalFile();
+    qCDebug(DIGIKAM_SHOWFOTO_LOG) << m_savingContext.destinationURL
+                                  << m_savingContext.destinationURL.isLocalFile();
 
     if (m_savingContext.destinationURL.isLocalFile())
     {
@@ -611,7 +753,8 @@ void ShowFoto::slotDeleteCurrentItem()
     QString warnMsg(i18n("About to delete file \"%1\"\nAre you sure?",
                          urlCurrent.fileName()));
 
-    if (QMessageBox::warning(this, qApp->applicationName(), warnMsg, QMessageBox::Apply | QMessageBox::Abort)
+    if (QMessageBox::warning(this, qApp->applicationName(), warnMsg,
+                             QMessageBox::Apply | QMessageBox::Abort)
         !=  QMessageBox::Apply)
     {
         return;
@@ -622,7 +765,8 @@ void ShowFoto::slotDeleteCurrentItem()
 
         if (!ret)
         {
-            QMessageBox::critical(this, qApp->applicationName(), i18n("Cannot delete \"%1\"", urlCurrent.fileName()));
+            QMessageBox::critical(this, qApp->applicationName(),
+                                  i18n("Cannot delete \"%1\"", urlCurrent.fileName()));
             return;
         }
 
@@ -638,11 +782,11 @@ void ShowFoto::slotDeleteCurrentItem()
             slotUpdateItemInfo();
             toggleActions(false);
             m_canvas->load(QString(), m_IOFileSettings);
+            emit signalNoCurrentItem();
         }
         else
         {
             // If there is an image after the deleted one, make that selected.
-
             slotOpenUrl(d->thumbBar->currentInfo());
         }
     }
@@ -678,142 +822,6 @@ bool ShowFoto::saveNewVersionInFormat(const QString&)
     return false;
 }
 
-void ShowFoto::openFolder(const QUrl& url)
-{
-    if (!url.isValid() || !url.isLocalFile())
-    {
-        return;
-    }
-
-    d->lastOpenedDirectory = url;
-
-    // Parse image IO mime types registration to get files filter pattern.
-
-    QString filter;
-    QStringList mimeTypes = supportedImageMimeTypes(QIODevice::ReadOnly, filter);
-
-    QString patterns = filter.toLower();
-    patterns.append (QLatin1Char(' '));
-    patterns.append (filter.toUpper());
-
-    qCDebug(DIGIKAM_SHOWFOTO_LOG) << "patterns=" << patterns;
-
-    // Get all image files from directory.
-
-    QDir dir(url.toLocalFile(), patterns);
-    dir.setFilter(QDir::Files);
-
-    if (!dir.exists())
-    {
-        return;
-    }
-
-    QFileInfoList fileinfolist = dir.entryInfoList();
-
-    if (fileinfolist.isEmpty())
-    {
-        //emit signalSorry();
-        return;
-    }
-
-    QFileInfoList::const_iterator fi;
-    ShowfotoItemInfoList infos;
-    ShowfotoItemInfo iteminfo;
-    DMetadata meta;
-
-    // And open all items in image editor.
-
-    for (fi = fileinfolist.constBegin(); fi != fileinfolist.constEnd(); ++fi)
-    {
-        iteminfo.name      = (*fi).fileName();
-        iteminfo.mime      = (*fi).suffix();
-        iteminfo.size      = (*fi).size();
-        iteminfo.folder    = (*fi).path();
-        iteminfo.url       = QUrl::fromLocalFile((*fi).filePath());
-        iteminfo.dtime     = (*fi).created();
-        meta.load((*fi).filePath());
-        iteminfo.ctime     = meta.getImageDateTime();
-        iteminfo.width     = meta.getImageDimensions().width();
-        iteminfo.height    = meta.getImageDimensions().height();
-        iteminfo.photoInfo = meta.getPhotographInformation();
-        infos.append(iteminfo);
-    }
-
-    if (d->droppedUrls)
-    {
-        d->infoList << infos;
-    }
-    else
-    {
-        d->infoList = infos;
-        d->model->clearShowfotoItemInfos();
-        emit signalInfoList(d->infoList);
-        slotOpenUrl(d->thumbBar->currentInfo());
-    }
-}
-
-void ShowFoto::slotDroppedUrls(const QList<QUrl>& droppedUrls)
-{
-    if (!droppedUrls.isEmpty())
-    {
-        QList<QUrl> validUrls;
-
-        foreach (const QUrl& url, droppedUrls)
-        {
-            if (url.isValid())
-            {
-                validUrls << url;
-            }
-        }
-
-        d->droppedUrls = true;
-
-        QList<QUrl> imagesUrls;
-        QList<QUrl> foldersUrls;
-
-        foreach (const QUrl& url, validUrls)
-        {
-            if (QMimeDatabase().mimeTypeForUrl(url).name().startsWith(QLatin1String("image"), Qt::CaseInsensitive))
-            {
-                imagesUrls << url;
-            }
-
-            if (QMimeDatabase().mimeTypeForUrl(url).name() == QLatin1String("inode/directory"))
-            {
-                foldersUrls << url;
-            }
-        }
-
-        if (!imagesUrls.isEmpty())
-        {
-            openUrls(imagesUrls);
-        }
-
-        if (!foldersUrls.isEmpty())
-        {
-            foreach (const QUrl& fUrl, foldersUrls)
-            {
-                openFolder(fUrl);
-            }
-        }
-
-        d->model->clearShowfotoItemInfos();
-        emit signalInfoList(d->infoList);
-
-        if (!d->infoList.isEmpty())
-        {
-            slotOpenUrl(d->thumbBar->currentInfo());
-        }
-        else
-        {
-            QMessageBox::information(this, qApp->applicationName(), i18n("There is no dropped item to process."));
-            qWarning(DIGIKAM_SHOWFOTO_LOG) << "infolist is empty..";
-        }
-
-        d->droppedUrls = false;
-    }
-}
-
 void ShowFoto::slotSetupMetadataFilters(int tab)
 {
     Setup::execMetadataFilters(this, tab+1);
@@ -838,7 +846,7 @@ void ShowFoto::slotAddedDropedItems(QDropEvent* e)
 
     if (!urls.isEmpty())
     {
-        slotDroppedUrls(urls);
+        slotDroppedUrls(urls, true);
     }
 }
 
